Start of fixing Dark Mode - Still need to build myself and test on the exe

--- a/src/Dark.css
+++ b/src/Dark.css
@@ -8,7 +8,6 @@
     --black: rgb(0, 0, 0);
     --placeholder: rgb(233, 184, 184);
 }
-
 /* Set sane font defaults */
 #root.dark-mode, #root.dark-mode div, #root.dark-mode span {
     color: var(--dark-text);
@@ -33,8 +32,11 @@
     color: var(--black);
 }
 /* Tag backgrounds */
-#root.dark-mode .ant-select-selection-item {
+#root.dark-mode .ant-collapse-content  {
     background-color: var(--dark-background-alt);
+}
+#root.dark-mode .ant-collapse-item {
+    background-color: var(--dark-background);
 }
 /* Fix for the Race Dropdown */
 #root.dark-mode .position-race-select .ant-select-selection-item {
@@ -168,4 +170,21 @@
 /* Tags */
 #root.dark-mode span.ant-tag, #root.dark-mode .tag-display-field span.anticon {
     color: var(--black);
+}
+
+#root.dark-mode input{
+    border:var(--bright-blue) solid 1px;
+}
+
+#root.dark-mode .ant-input-number {
+    background-color: var(--input-background); 
+}
+
+#root.dark-mode input, #root.dark-mode textarea {
+    background-color: var(--bright-blue);
+    color: var(--dark-toolbar);
+}
+
+#root.dark-mode .ant-input-number-input-wrap input {
+    border-radius: 0px;
 }
